--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start-dev":"nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node index.js"
+}
   "keywords": [],
   "author": "",
   "license": "ISC",
